--- a/AssignmentOne.html
+++ b/AssignmentOne.html
@@ -33,21 +33,16 @@
         <form>
         <table bgcolor="skyblue" align="center" width="100%" border="1">
             <tr align="center">
-                <td><label for="firstname">firstname</label></td>
-                <td><input type="text" name="" id="firstname" placeholder="Enter your name"></td>
-                <td><label for="lastname">lastname</label></td>
-                <td><input type="text" name="" id="lastname" placeholder="Enter your name"></td>
+                <td colspan="3">firstname<input type="text" name="" id="firstname" placeholder="Enter your name"></td>
+                <td colspan="3">lastname<input type="text" name="" id="lastname" placeholder="Enter your name"></td>
                 <div id="help"></div>
             </tr>
             <tr align="center">
-                <td><label for="email">Email-id</label></td>
-                <td><input type="email" name="" id="email" placeholder="enetr your email id"></td>
-                <td><label for="Phone">Phone-no</label></td>
-                <td><input type="tel" name="" id="Phone" placeholder="enter your phone no."></td>
+                <td colspan="3">Email-id<input type="email" name="" id="email" placeholder="enetr your email id"></td>
+                <td colspan="3">Phone-no<input type="tel" name="" id="Phone" placeholder="enter your phone no."></td>
             </tr>
             <tr align="center">
-                <td><label for="city">city</label></td>
-                <td>
+                <td colspan="3">city
                 <select>
                     <option value="None">Select</option>
                     <option value="Ahmedabad">Ahmedabad</option>
@@ -55,8 +50,7 @@
                     <option value="Baroda">Baroda</option>
                     <option value="Surat">Surat</option>
                 </select></td>
-                <td><label for="gender">Gender</label></td>
-                <td>
+                <td colspan="3"> Gender
                     Male <input type="radio" name="gender" id="">
                     Female <input type="radio" name="gender" id="">
                     Other <input type="radio" name="gender" id="">
